--- a/node-passport-login/views/login.ejs
+++ b/node-passport-login/views/login.ejs
@@ -1,8 +1,8 @@
 <div class="row mt-5">
     <div class="col-md-6 m-auto">
         <div class="card card-body">
-            <h1 class="text-center mb-3"><i class="fas fa-sign-in-alt"></i> Login</h1>
-            <% include ./partials/messages %>
+            <h1 class="text-center mb-3"><i class="fas fa-sign-in-alt"></i>Login</h1>
+            <%- include('./partials/messages.ejs') %>
             <form action="/users/login" method="POST">
                 <div class="form-group">
                     <label for="email">Email</label>
@@ -16,7 +16,7 @@
                 <button type="submit" class="btn btn-primary btn-block">Login</button>
             </form>
             <p class="lead mt-4">
-                No Account? <a href="/users/register">Register</a>
+                No Account? <a href="/users/signup">Signup</a>
             </p>
         </div>
     </div>
