--- a/node-passport-login/views/partials/messages.ejs
+++ b/node-passport-login/views/partials/messages.ejs
@@ -1,18 +1,22 @@
-<% if(typeof errors != 'undefined'){ %> <% errors.forEach(function(error) { %>
+<% if(typeof errors != 'undefined'){ %> 
+    <% errors.forEach(function(error) { %>
 <div class="alert alert-warning alert-dismissible fade show" role="alert">
     <%= error.msg %>
     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
         <span aria-hidden="true">&times;</span>
     </button>
 </div>
-<% }); %> <% } %> <% if(success_msg != ''){ %>
+<% }); %>
+<% } %>
+<% if(success_msg != ''){ %>
 <div class="alert alert-success alert-dismissible fade show" role="alert">
     <%= success_msg %>
     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
         <span aria-hidden="true">&times;</span>
     </button>
 </div>
-<% } %> <% if(error_msg != ''){ %>
+<% } %>
+<% if(error_msg != ''){ %>
 <div class="alert alert-danger alert-dismissible fade show" role="alert">
     <%= error_msg %>
     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
