--- a/node-passport-login/views/signup.ejs
+++ b/node-passport-login/views/signup.ejs
@@ -2,10 +2,10 @@
     <div class="col-md-6 m-auto">
         <div class="card card-body">
             <h1 class="text-center mb-3">
-                <i class="fas fa-user-plus"></i> Register
+                <i class="fas fa-user-plus"></i> Signup
             </h1>
-            <% include ./partials/messages %>
-            <form action="/users/register" method="POST">
+            <%- include('./partials/messages.ejs') %>
+            <form action="/users/signup" method="POST">
                 <div class="form-group">
                     <label for="name">Name</label>
                     <input type="name" id="name" name="name" class="form-control" placeholder="Enter Name"
@@ -28,7 +28,7 @@
                         value="<%= typeof password2 != 'undefined' ? password2 : '' %>" />
                 </div>
                 <button type="submit" class="btn btn-primary btn-block">
-                    Register
+                    Signup
                 </button>
             </form>
             <p class="lead mt-4">Have An Account? <a href="/users/login">Login</a></p>
