--- a/node-passport-login/views/welcome.ejs
+++ b/node-passport-login/views/welcome.ejs
@@ -3,7 +3,7 @@
         <div class="card card-body text-center">
             <h1><i class="fab fa-node-js fa-3x"></i></h1>
             <p>Create an account or login</p>
-            <a href="/users/register" class="btn btn-primary btn-block mb-2">Register</a>
+            <a href="/users/signup" class="btn btn-primary btn-block mb-2">Signup</a>
             <a href="/users/login" class="btn btn-secondary btn-block">Login</a>
         </div>
     </div>
