--- a/node-image-upload/views/index.ejs
+++ b/node-image-upload/views/index.ejs
@@ -18,7 +18,7 @@
     </span>
     <form action="/upload" method="POST" enctype="multipart/form-data">
       <div class="file-field input-field">
-        <div class="btn grey">
+        <div class="btn green">
           <span>File</span>
           <input name="myImage" type="file" placeholder="Only Images">
         </div>
