--- a/story-books/views/dashboard.hbs
+++ b/story-books/views/dashboard.hbs
@@ -2,7 +2,7 @@
 <h3>Welcome {{name}}</h3>
 <p>Here are your stories</p>
 
-{{#if strories}}
+{{#if stories}}
 <table class="striped">
     <thead>
         <tr>
