updated to es6 module 🚀

--- a/node-passport-login/views/login.ejs
+++ b/node-passport-login/views/login.ejs
@@ -18,6 +18,9 @@
             <p class="lead mt-4">
                 No Account? <a href="/users/signup">Signup</a>
             </p>
+            <p class="lead mt-4">
+                <a href="/users/forgetpass">Forget Password?</a>
+            </p>
         </div>
     </div>
 </div>
